# TCC

./: .gitignore  Makefile  README.md  config.py  config.yaml  pyproject.toml  requirements.txt
data/dictionarys/: bdq_municipio_bioma.json
doc/: followup_decisions.md
doc/_article/: dicionario_dados_article.md  dicionario_method_ranking_article.md  plano_fusao_temporal_article.md
doc/_src/: (bdq_build_biome_dict).md  (bdqueimadas_consolidated).md  (bdqueimadas_scraper).md  (inmet_consolidated).md  (inmet_scraper).md  (utils.py).md  README.md
doc/atas/: ata-2025-10-21.md  duvidas-2025-10-17.md
doc/databases/: base_A_no_rad.md  (+6 more)
notebooks/: audit_bases_calculated_and_arima.ipynb
scripts/: make_help.py  run_article_viz.ps1
src/: TCC.py  __init__.py  analysis.ipynb  audit_city_coverage.py  audit_consolidated_sources.py  audit_databases.py  audit_pipeline.py  audit_row_parity.py  bdq_build_biome_dict.py  bdqueimadas_consolidated.py  bdqueimadas_scraper.py  build_champion_temporal_bases.py  build_dataset.py  consolidated_bdqueimadas.py  consolidated_inmet.py  dataset_missing_audit.py  dedupe_base_datasets.py  eda_inmet.py  explore_risco_fogo.py  feature_engineering_physics.py  feature_engineering_temporal.py  inmet_bdqueimadas_consolidated.py  inmet_consolidated.py  inmet_scraper.py  inspect_modeling.py  load_inmet_csv_data.py  merge_risco_validation.py  model_eval_viz.py  modeling_build_datasets.py  plot_confusion.py  projeto_queimadas_scrapper.ipynb  run_results_consolidator.py  run_results_visualization.py  test.py  train_runner.py  tsf_constants.py  utils.py
(+426 files in other folders)
