[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tcc"
version = "0.1.0"
description = "TCC — Previsão de queimadas (BDQueimadas + INMET)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.1.1",
    "matplotlib==3.8.4",
    "seaborn>=0.13.2",
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "pyarrow>=17.0.0",
    "openpyxl>=3.1.5",
    "PyYAML>=6.0.1",
    "python-dateutil==2.9.0.post0",
    "psutil>=6.0.0",
    "tabulate>=0.9.0",
    "tqdm>=4.66.0",
    "requests==2.32.3",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "xarray>=2023.10.0",
    "netCDF4>=1.6.5",
    "scikit-learn>=1.5.0",
    "imbalanced-learn>=0.12.3",
    "xgboost>=2.1.0",
    "statsmodels>=0.14.0",
    "aeon>=0.9.0",
    "earthengine-api",
    "scipy>=1.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
